Add /matches and started work on frontend
